# **************************************************
# *  Author: Iceyee                                *
# *  Mail: iceyee.studio@qq.com                    *
# *  Git: https://github.com/iceyee                *
# **************************************************
#                                                   
[package]
name = "iceyee_config"
version = "1.0.0"
edition = "2021"
readme = "README.md"
description = "IceyeeError."
license = "Apache-2.0"
repository = "https://github.com/iceyee/rust_iceyee/tree/main/iceyee_config/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "=1.0.147", features = ["derive"] }
serde_json = "=1.0.87"
serde_yaml = "=0.9.14"
tokio = { version = "=1.21.2", features = ["full"] }
