# **************************************************
# *  Author: Iceyee                                *
# *  Mail: iceyee.studio@qq.com                    *
# *  Git: https://github.com/iceyee                *
# **************************************************
#                                                   
[package]
name = "iceyee_config"
version = "1.0.2"
edition = "2021"

description = "Config file parser."
keywords = ["iceyee", "config"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/iceyee/rust_iceyee/tree/main/iceyee_config/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "=1.0.147", features = ["derive"] }
serde_json = "=1.0.87"
serde_yaml = "=0.9.14"
tokio = { version = "1", features = ["full"] }
