# **************************************************
# *  Author: Iceyee                                *
# *  Mail: iceyee.studio@qq.com                    *
# *  Git: https://github.com/iceyee                *
# **************************************************
#                                                   
[package]
name = "iceyee_convert"
version = "1.0.3"
edition = "2021"

description = "类型转换, Conversion, 已被弃用, 参考iceyee_encoder."
keywords = ["iceyee", "convert"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/iceyee/rust_iceyee/tree/main/iceyee_convert/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
