# **************************************************
# *  Author: Iceyee                                *
# *  Mail: iceyee.studio@qq.com                    *
# *  Git: https://github.com/iceyee                *
# **************************************************
#                                                   
[package]
name = "iceyee_datetime"
version = "1.0.0"
edition = "2021"
readme = "README.md"
description = "Datetime."
license = "Apache-2.0"
repository = "https://github.com/iceyee/rust_iceyee/iceyee_datetime/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctor = "=0.1.26"
