# **************************************************
# *  Author: Iceyee                                *
# *  Mail: iceyee.studio@qq.com                    *
# *  Git: https://github.com/iceyee                *
# **************************************************
#                                                   
cargo-features = ["edition2024"]

[package]
name = "iceyee_encoder"
version = "7.0.0"
edition = "2024"

description = "Base64Encoder, HexEncoder, UrlEncoder."
keywords = ["iceyee", "base64", "hex", "url"]
license = "Apache-2.0"
repository = "https://github.com/iceyee/rust_iceyee/tree/main/iceyee_encoder/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
