# **************************************************
# *  Author: Iceyee                                *
# *  Mail: iceyee.studio@qq.com                    *
# *  Git: https://github.com/iceyee                *
# **************************************************
#                                                   
[package]
name = "iceyee_encoder"
version = "12.0.0"
edition = "2024"

description = "Base64Encoder, HexEncoder, UrlEncoder."
keywords = ["iceyee", "base64", "hex", "url"]
license = "Apache-2.0"
repository = "https://github.com/iceyee/rust_iceyee/tree/main/iceyee_encoder/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iceyee_error = "12"
