# **************************************************
# *  Author: Iceyee                                *
# *  Mail: iceyee.studio@qq.com                    *
# *  Git: https://github.com/iceyee                *
# **************************************************
#                                                   
[package]
name = "iceyee_error"
version = "10.0.0"
edition = "2021"

description = "Error Message."
keywords = ["error"]
license = "Apache-2.0"
repository = "https://github.com/iceyee/rust_iceyee/tree/main/iceyee_error/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-compression = { version = "0.4", features = ["all"] }
# iceyee_encoder = "8"
# iceyee_logger = "8"
# iceyee_random = "8"
# iceyee_time = "8"
# lettre = "0.11" 
# native-tls = "0.2"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# tokio = { version = "1", features = ["full"] }
# tokio-native-tls = "0.3"
