# **************************************************
# *  Author: Iceyee                                *
# *  Mail: iceyee.studio@qq.com                    *
# *  Git: https://github.com/iceyee                *
# **************************************************
#                                                   
[package]
name = "iceyee_logger"
version = "8.0.1"
edition = "2021"

description = "Logger."
keywords = ["iceyee", "logger"]
license = "Apache-2.0"
repository = "https://github.com/iceyee/rust_iceyee/tree/main/iceyee_logger/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iceyee_time = "8"
tokio = { version = "1", features = ["full"] }
