# **************************************************
# *  Author: Iceyee                                *
# *  Mail: iceyee.studio@qq.com                    *
# *  Git: https://github.com/iceyee                *
# **************************************************
#                                                   
[package]
name = "iceyee_net"
version = "10.0.1"
edition = "2021"

description = "Net Protocol."
keywords = ["http", "httpclient", "httpserver"]
license = "Apache-2.0"
repository = "https://github.com/iceyee/rust_iceyee/tree/main/iceyee_net/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compression = { version = "0.4", features = ["all"] }
iceyee_encoder = "10"
iceyee_error = "10"
iceyee_logger = "10"
iceyee_random = "10"
iceyee_time = "10"
lettre = "0.11" 
native-tls = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3"
