# **************************************************
# *  Author: Iceyee                                *
# *  Mail: iceyee.studio@qq.com                    *
# *  Git: https://github.com/iceyee                *
# **************************************************
#                                                   
[package]
name = "iceyee_random"
version = "3.0.2"
edition = "2021"

description = "Random."
keywords = ["iceyee", "random"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/iceyee/rust_iceyee/tree/main/iceyee_random/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
