# **************************************************
# *  Author: Iceyee                                *
# *  Mail: iceyee.studio@qq.com                    *
# *  Git: https://github.com/iceyee                *
# **************************************************
#                                                   
[package]
name = "iceyee_webdriver"
version = "1.0.1"
edition = "2021"

description = "web selenium."
keywords = ["iceyee"]
license = "Apache-2.0"
repository = "https://github.com/iceyee/rust_iceyee/tree/main/iceyee_webdriver/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cookie = "0.16"
iceyee_logger = "5" 
iceyee_time = "5" 
thirtyfour = "0.31" 
tokio = { version = "1", features = ["full"] } 
