# **************************************************
# *  Author: Iceyee                                *
# *  Mail: iceyee.studio@qq.com                    *
# *  Git: https://github.com/iceyee                *
# **************************************************
#                                                   
[package]
name = "iceyee_webdriver"
version = "5.0.0"
edition = "2024"

description = "web selenium."
keywords = ["iceyee"]
license = "Apache-2.0"
repository = "https://github.com/iceyee/rust_iceyee/tree/main/iceyee_webdriver/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cookie = "0.16"
iceyee_logger = "12" 
iceyee_random = "12" 
iceyee_time = "11" 
serde_json = "1.0" 
thirtyfour = "0.31" 
tokio = { version = "1", features = ["full"] } 
